# qualifyze-case-study

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main_qualifyze-risk.yml
app/: streamlit_app.py
dags/: data_ingestion_dag.py  feature_pipeline_dag.py  model_retrain_dag.py  scoring_dag.py
data/processed/: features.parquet
docs/: 00_project_plan.md  01_data_collection.md  02_eda_and_entity_resolution.md  03_feature_engineering.md  04_modeling.md  05_interpretability.md  06_model_improvements.md  07_deployment.md
models/: champion.joblib  champion_meta.joblib
notebooks/: 01_eda.ipynb  02_modeling.ipynb  03_interpretability.ipynb  04_feature_experiments.ipynb
reports/: create_slides.py  presentation.pptx  report.md
src/data/: fetch_all.py  fetch_dashboard.py  fetch_enforcement.py  fetch_inspections.py  fetch_warning_letters.py
src/features/: build_features.py
src/utils/: entity_resolution.py
tests/: test_features.py  test_model.py
